sm6250-common: overlay: Change all three default haptic levels to high
Bug:131774557
Test: flash a new C2F2 device with format, open accessibility vibration
settings. The current vibration intensity levels should be High

Change-Id: I0dc6488a4aa10ba3d606ecaa29729d4f0ecb9a1d
(cherry picked from commit 5b34c1ea60d65fc899484b727c5ecf32e47979ff)
Signed-off-by: JamieHoSzeYui <henloboii@protonmail.ch>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -753,5 +753,17 @@
          Off by default, since the framebuffer readback used to implement the
          fading edges is prohibitively expensive on most GPUs. -->
     <bool name="config_ui_enableFadingMarquee">true</bool>
-     
+    
+    <!-- The default intensity level for haptic feedback. See
+         Settings.System.HAPTIC_FEEDBACK_INTENSITY more details on the constant values and
+         meanings. -->
+    <integer name="config_defaultHapticFeedbackIntensity">3</integer>
+    <!-- The default intensity level for notification vibrations. See
+         Settings.System.NOTIFICATION_VIBRATION_INTENSITY more details on the constant values and
+         meanings. -->
+    <integer name="config_defaultNotificationVibrationIntensity">3</integer>
+    <!-- The default intensity level for notification vibrations. See
+         Settings.System.RING_VIBRATION_INTENSITY more details on the constant values and
+         meanings. -->
+    <integer name="config_defaultRingVibrationIntensity">3</integer>
 </resources>
