sm6250-common: overlay: Don't show Mobile plan preference item
Change-Id: I49703144c18ba67044f55b4854e696e159d095a4
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: Azurite <azuritenoah@gmail.com>
Signed-off-by: JamieHoSzeYui <henloboii@protonmail.ch>

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -36,4 +36,7 @@
      <!-- For Ultra Power Saving -->
      <bool name="config_supportUltraPowerSaving">true</bool>
 
+    <!-- Whether to show a preference item for mobile plan -->
+    <bool name="config_show_mobile_plan">false</bool>
+
 </resources>
