--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -33,4 +33,7 @@
        have distinct intensity levels -->
   <bool name="config_vibration_supports_multiple_intensities">true</bool>
 
+     <!-- For Ultra Power Saving -->
+     <bool name="config_supportUltraPowerSaving">true</bool>
+
 </resources>
